// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadTermsAndConditions should render checked if terms and conditions accepted 1`] = `
<WithStyles(WithFormControlContext(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={true}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": "",
        }
      }
      color="secondary"
    />
  }
/>
`;

exports[`Component FileUploadTermsAndConditions should render default view 1`] = `
<WithStyles(WithFormControlContext(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={false}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": "",
        }
      }
      color="error"
    />
  }
/>
`;

exports[`Component FileUploadTermsAndConditions should render default view with styles 1`] = `
<FileUploadTermsAndConditions
  acceptTermsAndConditions="test terms and conditions"
  classes={
    Object {
      "checkboxChecked": "FileUploadTermsAndConditions-checkboxChecked-4",
      "checkboxRoot": "FileUploadTermsAndConditions-checkboxRoot-3",
      "label": "FileUploadTermsAndConditions-label-2",
      "root": "FileUploadTermsAndConditions-root-1",
    }
  }
  disabled={false}
  isTermsAndConditionsAccepted={false}
  onAcceptTermsAndConditions={[MockFunction]}
/>
`;
